--- a/index.html
+++ b/index.html
@@ -124,13 +124,13 @@
                     <h4>Comments</h4>
                     <div class="comment-container row valign-wrapper">
                         <img src="user-placeholder.png" class="comment-user-pic col s2 m1">
-                        <div class="comment-content col s10">
+                        <div class="comment-content col s10 m11">
                             there is a cow
                         </div>
                     </div>
                     <div class="comment-container row valign-wrapper">
                         <img src="user-placeholder.png" class="comment-user-pic col s2 m1">
-                        <div class="comment-content col s10">
+                        <div class="comment-content col s10 m11">
                             another cow
                         </div>
                     </div>
@@ -139,9 +139,8 @@
                             <textarea id="textarea1" class="materialize-textarea"></textarea>
                             <label for="textarea1">Write a comment</label>
                         </div>
-                        <div class="col s2 m1">
-                            <a class="waves-effect waves-light btn yellow darken-3"><i class="material-icons">send</i></a>
-                        </div>
+                        <a class="col s2 m1 waves-effect waves-light btn yellow darken-3"><i
+                                class="material-icons">send</i></a>
                     </div>
                 </div>
 
