--- a/index.html
+++ b/index.html
@@ -124,14 +124,14 @@
                     <h4>Comments</h4>
                     <div class="comment-container row valign-wrapper">
                         <img src="user-placeholder.png" class="comment-user-pic col s2 m1">
-                        <div class="comment-content col s10 m11">
-                            there is a cow
+                        <div class="col s10 m11">
+                            <div class="comment-content">there is a cow</div>
                         </div>
                     </div>
                     <div class="comment-container row valign-wrapper">
                         <img src="user-placeholder.png" class="comment-user-pic col s2 m1">
-                        <div class="comment-content col s10 m11">
-                            another cow
+                        <div class="col s10 m11">
+                                <div class="comment-content">another cow</div>
                         </div>
                     </div>
                     <div class="row valign-wrapper">
