--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <textarea id="summernote" name="editordata"></textarea>
         </form>
 
-        <button class="btn" onclick="postData()"></button>
+        <button class="btn" onclick="postData()">Post</button>
 
         <div id="holder">
             <!-- sample post start -->
