--- a/index.html
+++ b/index.html
@@ -131,7 +131,8 @@
                     <a class="col s2 m1 waves-effect waves-light btn yellow darken-3"><i
                             class="material-icons">send</i></a>
                 </div>
-                
+            </div>    
+        </div>
                  <div id="loading2" class="loading">
                 
                 <div class="preloader-wrapper big active">
