--- a/discussuion.html
+++ b/discussuion.html
@@ -102,13 +102,13 @@
        <button class="btn" onclick="showSummernote()">
             Ask a new question
         </button>
-        <form method="post" hidden="true" id="ques">
+        <div id="ques" style="display:none">
             <div>Question Title(max 50 chars)</div>
             <textarea maxlength="50"></textarea>
             <div>Question Details</div>
-            <textarea id="summernote" name="editordata"></textarea>
+            <textarea id="summernote" ></textarea>
             <button class="btn" onclick="postData()">Post</button>
-        </form>
+        </div>
 
         <div id="holder">
             <!-- sample post start -->
@@ -173,10 +173,10 @@
         var config = {
             apiKey: "AIzaSyDohZMBbT1TVeDf-zu1B0S3tMXvxbgiL94",
             authDomain: "aviral-vlogs.firebaseapp.com",
-            //databaseURL: "https://aviral-vlogs.firebaseio.com",
+            databaseURL: "https://aviral-vlogs.firebaseio.com",
             projectId: "aviral-vlogs",
             storageBucket: "aviral-vlogs.appspot.com",
-            //messagingSenderId: "649916051517"
+            messagingSenderId: "649916051517"
         };
         firebase.initializeApp(config);
         var storage=firebase.storage();
