--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
        <button class="btn" onclick="showSummernote()">
             Add post
         </button>
-        <form method="post" hidden="true">
+        <div id="post" style="display:none">
             <textarea id="summernote" name="editordata"></textarea>
             <button class="btn" onclick="postData()">Post</button>
-        </form>
+        </div>
 
         <div id="holder">
             <!-- sample post start -->
