--- a/discussuion.html
+++ b/discussuion.html
@@ -53,7 +53,7 @@
                 <div class="nav-content blue darken-1">
                     <span class="nav-title" style="padding:10px;">Forum</span>
                     <a class="btn-floating btn-large halfway-fab waves-effect waves-light yellow darken-3">
-                        <i class="material-icons">add</i>
+                        <i class="material-icons" onclick="showSummernote()">add</i>
                     </a>
                 </div>
             </nav>
@@ -106,9 +106,7 @@
             </a>
         </div> -->
 
-        <button class="btn" onclick="showSummernote()">
-            Ask a new question
-        </button>
+        
         <div id="ques" style="display:none">
             <div>Question Title(max 50 chars)</div>
             <textarea maxlength="50"></textarea>
