--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                       </div>
                 </div>
                 <div class="post-footer row">
-                    <a>Load More...</a>
+                    <a onclick="fetchData()">Load More...</a>
                 </div>
         
            
