--- a/discussuion.html
+++ b/discussuion.html
@@ -108,6 +108,7 @@
             <div>Question Details</div>
             <textarea id="summernote"></textarea>
             <button class="btn" onclick="postData()">Post</button>
+            <span style="display:none;color: green" id="upimg"><br>Uploading image..</span>
             <span style="display:none;color: green" id="posting"><br>Posting..</span>
             <span style="display:none" id="postcomplete">Posted succesfully</span>
         </div>
