padding on textarea

--- a/discussuion.html
+++ b/discussuion.html
@@ -112,12 +112,16 @@
                     <label for="question-title">Question Title</label>
                 </div>
             </div>
-            <div>Question Details</div>
-            <textarea id="summernote"></textarea>
-            <button class="btn" onclick="postData()">Post</button>
-            <span style="display:none;color: green" id="upimg"><br>Uploading image..</span>
-            <span style="display:none;color: green" id="posting"><br>Posting..</span>
-            <span style="display:none" id="postcomplete">Posted succesfully</span>
+            <div class="row">
+                <div class="col s12">
+                    <div>Question Details</div>
+                    <textarea id="summernote"></textarea>
+                    <button class="btn" onclick="postData()">Post</button>
+                    <span style="display:none;color: green" id="upimg"><br>Uploading image..</span>
+                    <span style="display:none;color: green" id="posting"><br>Posting..</span>
+                    <span style="display:none" id="postcomplete">Posted succesfully</span>
+                </div>
+            </div>
         </div>
 
         <div id="holder">
