--- a/index.html
+++ b/index.html
@@ -34,13 +34,17 @@
                     <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                     <span class="right">
                         <ul class="hide-on-med-and-down">
-                            <li><a href="#" onclick="displayPortfolioOfCurrentUser();"><i
+                            <li><a href="#"><i
                                         class="material-icons left">collections_bookmark</i>NCERT PDFs</a></li>
+                                        <li><a href="/discussion.html" 
+                                            >Discussion forum
+                                            </a></li>
                             <li><a id="edit-button" href="form.html"><i class="material-icons left">edit</i>Edit
                                     Profile</a></li>
                             <li><a href="#" id="sign-out"
                                     class="waves-effect waves-light btn yellow darken-3 hide-on-log-out">Sign
                                     Out</a></li>
+                                    
                             <li><a href="#" id="sign-in"
                                     class="waves-effect waves-light btn yellow darken-3 hide-on-log-in">Sign
                                     In</a></li>
@@ -63,9 +67,10 @@
                 </div>
             </div>
         </li>
-        <li id="sign-in-sidenav" onclick="signIn()" class="hide-on-log-in"><a href="#" class="waves-effect"><i
+        <li id="sign-in-sidenav"  class="hide-on-log-in"><a href="login.html" class="waves-effect"><i
                     class="fa fa-2x fa-sign-in left" aria-hidden="true"></i>Sign In</a></li>
         <li><a href="index.html" class="waves-effect"><i class="material-icons left">home</i>Home</a></li>
+        <li><a href="discussion.html" class="waves-effect"><i class="material-icons left">speaker_notes</i>Discussion forum</a></li>
         <li><a href="#" class="waves-effect" onclick="displayPortfolioOfCurrentUser();"><i
                     class="material-icons left">collections_bookmark</i>NCERT PDFs</a></li>
         <li><a id="edit-sidenav" href="form.html" class="waves-effect"><i class="material-icons left">edit</i>Edit
