--- a/discussion.html
+++ b/discussion.html
@@ -30,7 +30,7 @@
         <div class="navbar-fixed" style="height: 124px;">
             <nav class="nav-extended">
                 <div class="nav-wrapper blue darken-1">
-                    <a href="index.html" class="brand-logo">Website Title</a>
+                    <a href="index.html" class="brand-logo">Discussion</a>
                     <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                     <span class="right">
                         <ul class="hide-on-med-and-down">
@@ -50,7 +50,7 @@
                 </div>
 
                 <div class="nav-content blue darken-1">
-                    <span class="nav-title" style="padding:10px;">Forum</span>
+                    <span class="nav-title" style="padding:10px;"></span>
                     <a class="btn-floating btn-large halfway-fab waves-effect waves-light yellow darken-3"
                         onclick="showSummernote()">
                         <i class="material-icons">add</i>
@@ -108,7 +108,7 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="material-icons prefix">title</i>
-                    <textarea id="question-title" class="materialize-textarea" data-length="50"></textarea>
+                    <textarea id="question-title" class="materialize-textarea" max-length="50"></textarea>
                     <label for="question-title">Question Title</label>
                 </div>
             </div>
