--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <title>Portfolios</title>
+    <title>Aviral vlogs</title>
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
@@ -30,7 +30,7 @@
         <div class="navbar-fixed">
             <nav>
                 <div class="nav-wrapper blue darken-1">
-                    <a href="index.html" class="brand-logo">Website Title</a>
+                    <a href="index.html" class="brand-logo">Aviral vlogs</a>
                     <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                     <span class="right">
                         <ul class="hide-on-med-and-down">
@@ -104,11 +104,13 @@
         <button class="btn" onclick="showSummernote()">
             Add post
         </button>
+        <br>
         <div id="post" style="display:none">
             <textarea id="summernote" name="editordata"></textarea>
             <button class="btn" onclick="postData()">Post</button>
             <span style="display:none;color: green" id="upimg"><br>Uploading image..</span>
             <span style="display:none;color: green" id="posting"><br>Posting..</span>
+            <span style="display:none;color: green" id="upimg"><br>Uploading image..</span>
             <span style="display:none" id="postcomplete">Posted succesfully</span>
         </div>
 
