--- a/book-reviews.html
+++ b/book-reviews.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <title>Discussion forum</title>
+    <title>Aviral vlogs</title>
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
@@ -25,11 +25,12 @@
 </head>
 
 <body class="flow-text">
+    <!-- Header -->
     <header>
         <div class="navbar-fixed">
             <nav>
                 <div class="nav-wrapper blue darken-1">
-                    <a href="index.html" class="brand-logo">Aviral vlogs</a>
+                    <a href="index.html" class="brand-logo">Book Reviews</a>
                     <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                     <span class="right">
                         <ul class="hide-on-med-and-down">
@@ -80,24 +81,17 @@
     </ul>
 
     <main>
-        <div id="ques" style="display:none">
-            <div class="row">
-                <div class="input-field col s12">
-                    <i class="material-icons prefix">title</i>
-                    <textarea id="question-title" class="materialize-textarea" max-length="50"></textarea>
-                    <label for="question-title">Question Title</label>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col s12">
-                    <div>Question Details</div>
-                    <textarea id="summernote"></textarea>
-                    <button class="btn" onclick="postData()">Post</button>
-                    <span style="display:none;color: green" id="upimg"><br>Uploading image..</span>
-                    <span style="display:none;color: green" id="posting"><br>Posting..</span>
-                    
-                </div>
-            </div>
+        <button class="btn" onclick="showSummernote()">
+            Add post
+        </button>
+        <br>
+        <div id="post" style="display:none">
+            <textarea id="summernote" name="editordata"></textarea>
+            <button class="btn" onclick="postData()">Post</button>
+            <span style="display:none;color: green" id="upimg"><br>Uploading image..</span>
+            <span style="display:none;color: green" id="posting"><br>Posting..</span>
+            <span style="display:none;color: green" id="upimg"><br>Uploading image..</span>
+            <span style="display:none" id="postcomplete">Posted succesfully</span>
         </div>
 
         <div id="holder">
@@ -121,11 +115,8 @@
             </div>
         </div>
         <div class="post-footer row">
-            <a>Load More...</a>
+            <a onclick="fetchData()">Load More</a>
         </div>
-
-
-
     </main>
 
 
@@ -143,10 +134,10 @@
         var config = {
             apiKey: "AIzaSyDohZMBbT1TVeDf-zu1B0S3tMXvxbgiL94",
             authDomain: "aviral-vlogs.firebaseapp.com",
-            databaseURL: "https://aviral-vlogs.firebaseio.com",
+            //databaseURL: "https://aviral-vlogs.firebaseio.com",
             projectId: "aviral-vlogs",
             storageBucket: "aviral-vlogs.appspot.com",
-            messagingSenderId: "649916051517"
+            //messagingSenderId: "649916051517"
         };
         firebase.initializeApp(config);
         var storage = firebase.storage();
@@ -154,9 +145,8 @@
 
     </script>
     <script src="auth.js"></script>
-    <script src="discussion.js"></script>
+    <script src="book-reviews.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    
 
 </body>
 
