change add btn on forum page

--- a/discussion.html
+++ b/discussion.html
@@ -29,7 +29,7 @@
         <div class="navbar-fixed">
             <nav>
                 <div class="nav-wrapper blue darken-1">
-                    <a href="index.html" class="brand-logo">Aviral vlogs</a>
+                    <a href="index.html" class="brand-logo">Forum</a>
                     <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                     <span class="right">
                         <ul class="hide-on-med-and-down">
@@ -95,7 +95,7 @@
                     <button class="btn" onclick="postData()">Post</button>
                     <span style="display:none;color: green" id="upimg"><br>Uploading image..</span>
                     <span style="display:none;color: green" id="posting"><br>Posting..</span>
-                    
+
                 </div>
             </div>
         </div>
@@ -125,6 +125,11 @@
         </div>
 
 
+        <div class="fixed-action-btn">
+            <a class="btn-floating btn-large blue darken-1 waves-effect waves-light" onclick="showSummernote();">
+                <i class="large material-icons">add</i>
+            </a>
+        </div>
 
     </main>
 
@@ -156,7 +161,7 @@
     <script src="auth.js"></script>
     <script src="discussion.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    
+
 
 </body>
 
