add video of the day section

--- a/discussion.html
+++ b/discussion.html
@@ -33,13 +33,13 @@
                     <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                     <span class="right">
                         <ul class="hide-on-med-and-down">
-                            <li><a href="/discussion.html"><i class="material-icons left">speaker_notes</i>Discussion
+                            <li><a href="discussion.html"><i class="material-icons left">speaker_notes</i>Discussion
                                     forum
                                 </a></li>
                             <li><a id="edit-button" href="book-reviews.html"><i class="material-icons left">book</i>Book
                                     Reviews</a></li>
-                            <li><a id="edit-button" href="form.html"><i class="material-icons left">edit</i>Edit
-                                    Profile</a></li>
+                            <li><a href="vod.html"><i class="material-icons left">video_library</i>Video of the Day</a>
+                            </li>
                             <li><a href="#" id="sign-out"
                                     class="waves-effect waves-light btn yellow darken-3 hide-on-log-out">Sign
                                     Out</a></li>
@@ -73,8 +73,7 @@
                 forum</a></li>
         <li><a id="book-reviews" href="book-reviews.html" class="waves-effect"><i
                     class="material-icons left">book</i>Book Reviews</a></li>
-        <li><a id="edit-sidenav" href="form.html" class="waves-effect"><i class="material-icons left">edit</i>Edit
-                Profile</a></li>
+        <li><a id="edit-sidenav" href="vod.html" class="waves-effect"><i class="material-icons left">video_library</i>Video of the Day</a></li>
         <li id="sign-out-sidenav" class="hide-on-log-out" onclick="signOut()"><a href="#" class="waves-effect"><i
                     class="fa fa-2x fa-sign-out left" aria-hidden="true"></i>Sign Out</a></li>
     </ul>
@@ -124,13 +123,12 @@
             <a>Load More...</a>
         </div>
 
-
+        <!-- FAB -->
         <div class="fixed-action-btn">
-            <a class="btn-floating btn-large blue darken-1 waves-effect waves-light" onclick="showSummernote();">
+            <a class="btn-floating btn-large yellow darken-3 waves-effect waves-light" onclick="showSummernote();">
                 <i class="large material-icons">add</i>
             </a>
         </div>
-
     </main>
 
 
