--- a/book-reviews.html
+++ b/book-reviews.html
@@ -128,6 +128,7 @@
     <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.9.2/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.9.2/firebase-storage.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.11.1/firebase-functions.js"></script>
     <script>
         // Initialize Firebase
         var config = {
@@ -140,6 +141,8 @@
         };
         firebase.initializeApp(config);
         var storage = firebase.storage();
+         var functions = firebase.functions();
+
 
 
     </script>
