--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@
     <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.9.2/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.9.2/firebase-storage.js"></script>
-    <script>
+    <script src="https://www.gstatic.com/firebasejs/5.11.1/firebase-functions.js"></script>
+        <script>
         // Initialize Firebase
         var config = {
             apiKey: "AIzaSyDohZMBbT1TVeDf-zu1B0S3tMXvxbgiL94",
@@ -141,6 +142,8 @@
         };
         firebase.initializeApp(config);
         var storage = firebase.storage();
+         var functions = firebase.functions();
+
 
 
     </script>
