change title size

--- a/vod.html
+++ b/vod.html
@@ -30,7 +30,7 @@
         <div class="navbar-fixed">
             <nav>
                 <div class="nav-wrapper blue darken-1">
-                    <a href="index.html" class="brand-logo">Book Reviews</a>
+                    <a href="index.html" class="brand-logo">Video of the Day</a>
                     <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                     <span class="right">
                         <ul class="hide-on-med-and-down">
