--- a/vod.html
+++ b/vod.html
@@ -114,7 +114,10 @@
             </div>
         </div>
         <div class="post-footer row">
-            <a onclick="fetchData()">Load More</a>
+            <a class="btn-flat waves-effect" onclick="fetchData()">
+                <i class="material-icons left">expand_more</i>
+                Load More
+            </a>
         </div>
     </main>
 
