change login title

--- a/login.html
+++ b/login.html
@@ -30,13 +30,10 @@
         <div class="navbar-fixed" style="height: 124px;">
             <nav class="nav-extended">
                 <div class="nav-wrapper blue darken-1">
-                    <a href="index.html" class="brand-logo">Aviral vlogs</a>
+                    <a href="index.html" class="brand-logo">EduForum</a>
                     <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                     <span class="right">
                         <ul class="hide-on-med-and-down">
-                            <li><a href="#" onclick="displayPortfolioOfCurrentUser();"><i
-                                        class="material-icons left">collections_bookmark</i>NCERT PDFs</a></li>
-                            
                             <li><a href="#" id="sign-out"
                                     class="waves-effect waves-light btn yellow darken-3 hide-on-log-out">Sign
                                     Out</a></li>
