show add button to admin only

--- a/book-reviews.html
+++ b/book-reviews.html
@@ -81,7 +81,7 @@
     </ul>
 
     <main>
-        <button class="btn" onclick="showSummernote()">
+        <button id="add-btn" class="btn hide" onclick="showSummernote()">
             Add post
         </button>
         <br>
