--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </ul>
 
     <main>
-        <button class="btn" onclick="showSummernote()">
+        <button id="add-btn" class="btn hide" onclick="showSummernote()">
             Add post
         </button>
         <br>
