--- a/vod.html
+++ b/vod.html
@@ -80,7 +80,7 @@
     </ul>
 
     <main>
-        <button class="btn" onclick="showSummernote()">
+        <button id="add-btn" class="btn hide" onclick="showSummernote()">
             Add post
         </button>
         <br>
