--- a/practice-sheets.html
+++ b/practice-sheets.html
@@ -99,7 +99,13 @@
             <div class="post-holder card-panel">
                 <div class="row">
                     <div class="col s10">Sheet 1</div>
-                    <div class="col s2"><a href="https://drive.google.com/file/d/1-_if2oGoZR152IhvX_ucIXrXYgcwS-_u/view?usp=sharing"><i class="material-icons">save_alt</i></a></div>
+                    <div class="col s2"><a target="_blank" href="https://drive.google.com/file/d/1-_if2oGoZR152IhvX_ucIXrXYgcwS-_u/view?usp=sharing"><i class="material-icons">save_alt</i></a></div>
+                </div>
+            </div>
+            <div class="post-holder card-panel">
+                <div class="row">
+                    <div class="col s10">Sheet 2</div>
+                    <div class="col s2"><a target="_blank" href="https://firebasestorage.googleapis.com/v0/b/aviral-vlogs.appspot.com/o/IRCTC%20Next%20Generation%20eTicketing%20System.pdf?alt=media&token=27db1653-e1b9-435d-88c1-688498790bfe"><i class="material-icons">save_alt</i></a></div>
                 </div>
             </div>
         </div>
