--- a/discussion.html
+++ b/discussion.html
@@ -129,7 +129,7 @@
 
         <!-- FAB -->
         <div class="fixed-action-btn">
-            <a class="btn-floating btn-large yellow darken-3 waves-effect waves-light" onclick="showSummernote();">
+            <a class="btn-floating btn-large yellow darken-3 waves-effect waves-light" onclick="showSummernotee();">
                 <i class="large material-icons">add</i>
             </a>
         </div>
